@@ -2,9 +2,11 @@ DIST ISPEnv2-phamm.schema 9071 RMD160 b31c20194096a400ba0d446b4229c1ee31bc2a05 S
 DIST amavis-phamm.schema 24405 RMD160 3f65f8cc296540c2b6472493b153b4a362ad69f0 SHA1 07839ea22bdd2ae7f968cb3f05fe3204c2d23b41 SHA256 c67820e358bc220b3c3a9ec117536edb640bdfac73d7cd4931ad31b4c9702444
 DIST dnsdomain2-phamm.schema 3848 RMD160 97e2c0901580e93ab6c91e0b1322004d53b82d9b SHA1 5105f2f373f315087ddca3a23b0eae60f557133d SHA256 86df6831f910b2764d04bd3c41f82cbc77b139783c1f6214d22f27f2e3992196
 DIST phamm-0.5.16.tar.gz 124162 RMD160 e3138a8584518e61afa95fce5eb34adbe7dbe35d SHA1 8f75d36a201ff0698848095f049eb504943397ef SHA256 0753dd780acd9be35c4ed156df0ad8b8f45f50265e818002b759577fc05fe80a
+DIST phamm05-current.tar.gz 130505 RMD160 fe65fcaf32d25f8952f68926c34fd3a2b1cc68a8 SHA1 2c1b316eda7a98ba6a6df633d6959dcacac0be0b SHA256 b3647ffba01070fa5f3b8fe6618c8bf65c0dee3c45f4638da1b871d3d92dbd5a
 DIST pureftpd-phamm.schema 2474 RMD160 a0b9ea825d5d5ead3a80d8b49473a4b44bc71230 SHA1 0f71d3f7e73a89c4caf03977b76a87007e5e2179 SHA256 0de60297967eb5037575d72ef88aa2acc03aecb10b4b470f2dd3f865ed1df0be
 DIST radius-phamm.schema 13259 RMD160 96b2c65ba20ca25223e8fabc7d2a86bd0dcf48ce SHA1 07a7fdbc17fd02059e4a3038886b85d5fded4d68 SHA256 c7261f3ba732dd6f7e55c7b9eece60ca28fd18e2c28db8ca3c8c03742986346f
 DIST samba-phamm.schema 16927 RMD160 a94fab67bec14bca9a7e1306e64917af237c8da1 SHA1 9fdcd0c5ef857ed08ea27456b2a380b43795a7d7 SHA256 d54ffc6422c0299298926519ee6db4857d333c6877b72c51a987059ac43418d0
 EBUILD phamm-0.5.16.ebuild 2860 RMD160 af114d009dd82f55737cacdceaef063783a3a3a2 SHA1 711d37566b4a9191b99bb67eea45d322b96b679e SHA256 b5133edee94bc8b4fdee4436222ebb0a659c5e0ddf3d9f671260b4c3e3e75684
-MISC ChangeLog 345 RMD160 07e563399b212c4e78115221d4d8b39581d6cd19 SHA1 22d42d609c49c859be5da1aafaf7546236f5edcb SHA256 16c8722e799ff8f805923f2ee67d5945814573735dbb39670b9eebcd029bdf8d
+EBUILD phamm-9999.ebuild 2304 RMD160 82dd3336f5259aeccc6d3ce77228e53572afc3d4 SHA1 587160da3fe702fad8d08826883ecf9876884ab2 SHA256 4638aa176f470edd0ca7386aa3b1d96bc86b50d26e5405e22b26805012f663b4
+MISC ChangeLog 449 RMD160 b44a92b8ed142146cbac43519a431941c5423158 SHA1 1b924800f85579bbdc41dbccfbfd0ae9bc6cc691 SHA256 c4147e9fc1a0a18f01b6b65552f75fb806e9d17383000e7329e850aae6059a84
 MISC metadata.xml 718 RMD160 33bf0869b3923dee7ae3051e83406881d7a9fc98 SHA1 1023950c2237969fa974f6744d138a330f4e2197 SHA256 41d6a3cc91292edc0199b0b92f3f0a2483f8ff9a595511fc33b5b89f65a3c4f8
