@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> +phamm-9999.ebuild:
+  add cuurent snapshot ebuild
+
   09 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> phamm-0.5.16.ebuild:
   fix QA Notice
 
